# SpeechScan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SpeechScan.spec  api_key.txt  logging_config.py  main.py  mkdocs.yml  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
Scripts/: activate  activate.bat
docs/: index.md
docs/css/: mkdocstrings.css  theme-variants.css
docs/gen_ref_pages/: config.py  context.py  gen_ref_pages.py  generate.py  helpers.py  traverse.py
modules/: check_url_thread.py  count_words.py  count_words_thread.py  download_video_thread.py  file_window.py  start_window.py  transcribe_audio.py  youtube_window.py
src/speechscan/: __main__.py  app.py  logging_config.py
src/speechscan/assets/style/: style.qss
src/speechscan/services/text/: count_words.py
src/speechscan/services/transcription/: transcribe_audio.py
src/speechscan/threads/: check_url_thread.py  count_words_thread.py  download_video_thread.py
src/speechscan/ui/: file_window.py  start_window.py  youtube_window.py
src/speechscan/ui/views/: file_window.ui  youtube_window.ui
src/speechscan/utils/: paths.py
views/: file_window.ui  open_window.ui  youtube_window.ui
