[tool.poetry]
name = "speechscan"
version = "1.0.0"
description = "AI-powered tool for word counting in speech transcripts."
authors = ["Antek-N <antek.nikolajdu@gmail.com>"]
license = "CC0-1.0"
readme = "README.md"
package-mode = true
packages = [{ include = "speechscan", from = "src" }]

[tool.poetry.scripts]
speechscan = "speechscan.__main__:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
requests = "2.32.3"
yt-dlp = ">=2025.9.26"
pyqt5 = { version = "5.15.11", markers = "sys_platform == 'windows'" }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.12"
mypy = "^1.17.1"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pyinstaller = "^6.10"
pre-commit = "^3.6.0"
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocs-autorefs = "^1.2"
mkdocs-gen-files = "^0.5"
mkdocs-literate-nav = "^0.6"
mkdocstrings = "^0.25"
mkdocstrings-python = "^1.10"
pymdown-extensions = "^10.8"
types-requests = "^2.32.4.20250913"
pyqt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true